# PersonalTODO

backend/: CMakeLists.txt  conanfile.txt
backend/sql/: 001_init.sql
backend/src/: App.cpp  DatabaseComponent.hpp  SwaggerComponent.hpp
backend/src/controller/: TodoController.hpp
backend/src/db/: UserDb.hpp
backend/src/dto/: PageDto.hpp  TodoDto.hpp
backend/src/service/: TodoService.cpp  TodoService.hpp
frontend/: package.json  pnpm-lock.yaml
frontend/src/: global.css  root.tsx
frontend/src/components/: task.tsx
frontend/src/routes/: index.tsx  layout.tsx
